--- a/css/tailwindcss-compiled.css
+++ b/css/tailwindcss-compiled.css
@@ -606,16 +606,16 @@ video {
   right: -5rem;
 }
 
+.-top-10 {
+  top: -2.5rem;
+}
+
 .-top-14 {
   top: -3.5rem;
 }
 
 .bottom-0 {
   bottom: 0px;
-}
-
-.bottom-\[190px\] {
-  bottom: 190px;
 }
 
 .left-0 {
@@ -660,26 +660,6 @@ video {
 
 .top-40 {
   top: 10rem;
-}
-
-.bottom-10 {
-  bottom: 2.5rem;
-}
-
-.bottom-20 {
-  bottom: 5rem;
-}
-
-.bottom-36 {
-  bottom: 9rem;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.-top-10 {
-  top: -2.5rem;
 }
 
 .isolate {
@@ -865,6 +845,10 @@ video {
   width: 11rem;
 }
 
+.w-48 {
+  width: 12rem;
+}
+
 .w-5 {
   width: 1.25rem;
 }
@@ -899,10 +883,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-48 {
-  width: 12rem;
 }
 
 .max-w-screen-md {
@@ -967,8 +947,16 @@ video {
   flex-direction: column-reverse;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -989,10 +977,6 @@ video {
 
 .gap-8 {
   gap: 2rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
 }
 
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
@@ -1020,6 +1004,10 @@ video {
 
 .overflow-y-hidden {
   overflow-y: hidden;
+}
+
+.overflow-y-scroll {
+  overflow-y: scroll;
 }
 
 .rounded {
@@ -1081,6 +1069,20 @@ video {
   --tw-bg-opacity: 0.4;
 }
 
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.from-white {
+  --tw-gradient-from: #fff var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-transparent {
+  --tw-gradient-to: transparent var(--tw-gradient-to-position);
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1125,11 +1127,6 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1140,13 +1137,12 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
 .pb-14 {
   padding-bottom: 3.5rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 
 .pb-5 {
@@ -1157,8 +1153,8 @@ video {
   padding-left: 4rem;
 }
 
-.pl-5 {
-  padding-left: 1.25rem;
+.pr-10 {
+  padding-right: 2.5rem;
 }
 
 .pr-4 {
@@ -1169,32 +1165,20 @@ video {
   padding-top: 3rem;
 }
 
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pr-10 {
-  padding-right: 2.5rem;
-}
-
-.pb-16 {
-  padding-bottom: 4rem;
-}
-
 .pt-8 {
   padding-top: 2rem;
 }
 
-.pb-8 {
-  padding-bottom: 2rem;
+.pb-3 {
+  padding-bottom: 0.75rem;
 }
 
-.pb-4 {
-  padding-bottom: 1rem;
+.pt-4 {
+  padding-top: 1rem;
 }
 
-.pb-2 {
-  padding-bottom: 0.5rem;
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
 .text-center {
@@ -1510,14 +1494,12 @@ video {
     align-items: center;
   }
 
-  .md\:gap-12 {
-    gap: 3rem;
+  .md\:justify-center {
+    justify-content: center;
   }
 
-  .md\:space-y-4 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-y-reverse: 0;
-    margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+  .md\:gap-12 {
+    gap: 3rem;
   }
 
   .md\:px-0 {
@@ -1540,12 +1522,18 @@ video {
     padding-bottom: 1.25rem;
   }
 
-  .md\:pb-0 {
+  .md\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .md\:py-0 {
+    padding-top: 0px;
     padding-bottom: 0px;
   }
 
-  .md\:pl-0 {
-    padding-left: 0px;
+  .md\:pb-0 {
+    padding-bottom: 0px;
   }
 
   .md\:pl-6 {
@@ -1556,6 +1544,10 @@ video {
     padding-left: 2rem;
   }
 
+  .md\:pr-0 {
+    padding-right: 0px;
+  }
+
   .md\:pr-12 {
     padding-right: 3rem;
   }
@@ -1564,8 +1556,16 @@ video {
     padding-right: 2rem;
   }
 
-  .md\:pr-0 {
-    padding-right: 0px;
+  .md\:pb-5 {
+    padding-bottom: 1.25rem;
+  }
+
+  .md\:pt-12 {
+    padding-top: 3rem;
+  }
+
+  .md\:pt-0 {
+    padding-top: 0px;
   }
 
   .md\:text-base {
@@ -1666,6 +1666,10 @@ video {
     flex-wrap: wrap;
   }
 
+  .lg\:items-center {
+    align-items: center;
+  }
+
   .lg\:space-y-16 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
     margin-top: calc(4rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1694,10 +1698,6 @@ video {
 
   .lg\:pb-6 {
     padding-bottom: 1.5rem;
-  }
-
-  .lg\:text-center {
-    text-align: center;
   }
 
   .lg\:text-2xl {
