--- a/css/tailwindcss.css
+++ b/css/tailwindcss.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.has-error {
+    @apply border border-red-500 text-red-500 ring-4 ring-red-500 ring-opacity-50;
+}
