--- a/css/custom.css
+++ b/css/custom.css
@@ -26,3 +26,17 @@ html {
     opacity: 0;
     pointer-events: none;
 }
+
+#cofepris {
+    position: fixed;
+    bottom: 20px;
+    left: 30px;
+    font-size: 15px;
+    /* text-shadow: 0 0 4px white; */
+    color: #000;
+    font-weight: 700;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 5px;
+    border-radius: 27px;
+    z-index: 1045;
+}
